# Hedgera

./: .env.example  Dockerfile  Dockerfile.bridge  dashboard_bridge.py  docker-compose.yml  full_pipeline.py  full_pipeline_enhanced.py  historical_data.py  main.py  monitor_pipeline_detailed.py  new_enhanced_pipeline.py  parallel_full_pipeline.py  parallel_full_pipeline_clean.py  run_pipeline_pathway.py  test_pathway_integration.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_alpaca_direct.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: jwt.py
backend/app/models/: agent.py  user.py
backend/app/routes/: auth.py
backend/app/services/: alpaca_service.py
backend/config/: detailed_logging.py  logging_config.py  logging_setup.py  redis_config.py  settings.py
backend/finrl_integration/: __init__.py  main.py  paper_trading.py
backend/finrl_integration/explainers/: background_states.npy  explainer_metadata.json
backend/scripts/: debug_finrl_model.py  diagnose_finrl_data.py  dummy_data_buy_sell.csv  dummy_data_generated.csv  monitor_finrl_test.sh  monitor_live.sh  monitor_pipeline.sh  quick_status.sh  show_pipeline_status.sh  simple_monitor.sh  start_pipeline.sh  stop_and_clean.sh  test_60min_workflow.sh  test_finrl_buy_sell.py  test_finrl_complete.py  test_finrl_dummy.py  ticker_categories.json  watch_finrl.sh
backend/scripts/deployment/: deploy.sh  rollback.sh
backend/scripts/maintenance/: backup_data.sh  cleanup_logs.sh  restore_data.sh
backend/scripts/monitoring/: health_check.sh  monitor_streams.sh
backend/scripts/setup/: install_dependencies.sh  setup_redis.sh
backend/src/: __init__.py
backend/src/agents_redis/: README.md  __init__.py  base_agent.py  debate.py  decision_agent_redis.py  decision_agent_redis_mcp.py  final_reports.json  market_analyst_redis.py  master_runner.py  news_analyst_redis.py  sec_report_analyst_redis.py  social_analyst_redis.py
backend/src/api/: dependencies.py  main.py
backend/src/consumers/: base_consumer.py  master_state_consumer.py
backend/src/core/: kafka_client.py  redis_client.py
backend/src/engine/: __init__.py  pathway_services.py  (+2 more)
backend/tests/: conftest.py
(+121 files in other folders)
