[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hedgera-backend"
version = "0.1.0"
description = "Hedgera Trading System Backend"
requires-python = ">=3.11"
dependencies = [
    # Redis and Async
    "redis>=5.0.0",
    # HTTP Client
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    # FastAPI and Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

]
[tool.hatch.build.targets.wheel]
packages = ["src", "config"]